--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,14 @@
         "@heroicons/react": "^2.0.11",
         "@microsoft/applicationinsights-react-js": "^17.3.1",
         "@microsoft/applicationinsights-web": "^3.3.1",
+        "@types/plotly.js-dist-min": "^2.3.4",
         "@types/prettier": "^2.7.3",
         "@types/react": "^18.0.15",
         "classnames": "^2.3.1",
         "es-cookie": "^1.4.0",
         "lodash": "^4.17.21",
         "next": "^13.4.12",
+        "plotly.js-dist-min": "^3.0.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-confetti": "^6.1.0",
