--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
         "@heroicons/react": "^2.0.11",
         "@microsoft/applicationinsights-react-js": "^17.3.1",
         "@microsoft/applicationinsights-web": "^3.3.1",
+        "@types/chroma-js": "^3.1.1",
         "@types/plotly.js-dist-min": "^2.3.4",
         "@types/prettier": "^2.7.3",
         "@types/react": "^18.0.15",
+        "chroma-js": "^3.1.2",
         "classnames": "^2.3.1",
         "es-cookie": "^1.4.0",
         "lodash": "^4.17.21",
