--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "chroma-js": "^3.1.2",
         "classnames": "^2.3.1",
         "es-cookie": "^1.4.0",
+        "immutable": "^5.1.1",
         "lodash": "^4.17.21",
         "next": "^13.4.12",
         "plotly.js-dist-min": "^3.0.1",
