--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "@heroicons/react": "^2.0.11",
         "@microsoft/applicationinsights-react-js": "^17.3.1",
         "@microsoft/applicationinsights-web": "^3.3.1",
+        "@types/anylogic-cloud-client": "^8.5.1",
         "@types/chroma-js": "^3.1.1",
         "@types/lodash": "^4.17.16",
         "@types/plotly.js-dist-min": "^2.3.4",
